# agilitycms-python-sdk

./: .gitignore  README.md  setup.cfg
src/agility_cms/: __init__.py  client.py
