[metadata]
# replace with your username:
name = agility-cms
version = 0.0.9
author = James Rao
author_email = jamesnarayanrao@gmail.com
description = Python SDK for Agility CMS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JamesRao98/agilitycms-python-sdk
project_urls =
    Bug Tracker = https://github.com/JamesRao98/agilitycms-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests

[options.packages.find]
where = src
